优化scala和java混编代码工程结构和pom文件配置

--- a/pom.xml
+++ b/pom.xml
@@ -55,9 +55,17 @@
                 <version>${maven.plugin.compiler.version}</version>
                 <executions>
                     <execution>
+                        <id>compile-java</id>
                         <phase>compile</phase>
                         <goals>
                             <goal>compile</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>test-compile-java</id>
+                        <phase>test-compile</phase>
+                        <goals>
+                            <goal>testCompile</goal>
                         </goals>
                     </execution>
                 </executions>
