抽象语法树代码完善，以及语法解析器代码优化

--- a/streamexpr-core/pom.xml
+++ b/streamexpr-core/pom.xml
@@ -45,6 +45,7 @@
                 <configuration>
                     <!-- scala编译器只编译scala代码，禁止编译java代码 -->
                     <sendJavaToScalac>false</sendJavaToScalac>
+                    <addScalacArgs>-deprecation</addScalacArgs>
                 </configuration>
                 <executions>
                     <execution>
