--- a/streamexpr-core/pom.xml
+++ b/streamexpr-core/pom.xml
@@ -65,5 +65,13 @@
                 </executions>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/scala</directory>
+                <includes>
+                    <include>**/StreamExpressionGrammar.txt</include>
+                </includes>
+            </resource>
+        </resources>
     </build>
 </project>
